--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,5 +1,20 @@
-h1 {
-    h2 {
-        color: purple;
-    }
-}
+/*! Primitive
+  by Tania Rascia */ 
+
+// Configuration
+@import "base/variables";
+@import "base/mixins";
+
+// Reset
+@import "base/normalize";
+@import "base/reset";
+
+// Components
+@import "components/scaffolding";
+@import "components/grid";
+@import "components/helpers";
+@import "components/buttons";
+@import "components/forms";
+@import "components/tables";
+@import "components/navigation";
+@import "components/layout";
