--- a/assets/scss/base/_variables.scss
+++ b/assets/scss/base/_variables.scss
@@ -81,12 +81,12 @@ $borders: $border-width $border-style $border-color;
 /* Buttons */
 
 $button-background: $primary-color;
-$button-background-hover: darken($button-background, 10%);
+$button-background-hover: lighten($button-background, 10%);
 $button-color: #ffffff;
 $button-font-weight: 600;
 $button-font-family: -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif;
 $button-font-size: 1rem;
-$button-border-width: 1px;
+$button-border-width: 0px;
 $button-border-style: solid;
 $button-border-color: $button-background;
 $button-border-radius: $border-radius;
