--- a/assets/scss/components/_scaffolding.scss
+++ b/assets/scss/components/_scaffolding.scss
@@ -207,6 +207,11 @@ dd {
 	margin-right: auto;
 }
 
+.tiny-container {
+	@extend .container;
+	max-width: $x-small;
+}
+
 // Small container
 .small-container {
 	@extend .container;
