--- a/assets/scss/base/_variables.scss
+++ b/assets/scss/base/_variables.scss
@@ -6,7 +6,7 @@
 
 /* Containers */
 
-$x-small: 600px;
+$x-small: 500px;
 $small: 800px;
 $medium: 1000px;
 $large: 1400px;
@@ -19,8 +19,9 @@ $desktop: $medium;
 /* Colors */
 
 $background: white; 
-$primary-color: #C35531;
-$secondary-color: #231F20;
+$primary-color: #c96645;
+$secondary-color: #FFDC88;
+$tertiary-color: #9C2924;
 $accent-color: #231F20;
 $light: #f0f0f0;
 $alternate-background: #f0f0f0;
@@ -28,7 +29,7 @@ $alternate-color: #404040;
 $link-color: $primary-color;
 $link-hover-color: darken($link-color, 15%);
 $highlight: #ffeea8;
-$error: #D33C40;
+$error: #9C2924;
 $bq-border: 16px solid #f0f0f0;
 
 /* Typography */
@@ -47,7 +48,8 @@ $line-height: 1.6;
 $heading-font-color: #0e0c0c;
 $heading-font-weight: 700; 
 $heading-font-family: 'Quattrocento', -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif;
-$heading-line-height: 1.3;
+$heading-line-height: 1.3; 
+$display: 'Caesar Dressing', -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif;
 
 // Mobile heading font size
 $h1-mobile: 1.75rem;
@@ -67,8 +69,8 @@ $h5: 1.25rem;
 
 $padding: 30px;
 $margins: 1.5rem;
-$content-padding: 60px 0;
-$content-padding-mobile: 30px 0;
+$content-padding: 40px 0;
+$content-padding-mobile: 20px 0;
 
 /* Borders */
 
@@ -83,9 +85,9 @@ $borders: $border-width $border-style $border-color;
 $button-background: $primary-color;
 $button-background-hover: lighten($button-background, 10%);
 $button-color: #ffffff;
-$button-font-weight: 600;
-$button-font-family: -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif;
-$button-font-size: 1rem;
+$button-font-weight: 600; 
+$button-font-family: 'Quattrocento Sans', -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif;
+$button-font-size: 1.1rem;
 $button-border-width: 0px;
 $button-border-style: solid;
 $button-border-color: $button-background;
