--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -13,7 +13,7 @@
 	font-family: $button-font-family;
 	font-size: $button-font-size;
 	text-transform: $button-text-transform;
-	padding: .75rem 1.25rem;
+	padding: 15px 20px;
 	margin: 0 0 .5rem 0;
 	vertical-align: middle;
 	text-align: center;
