--- a/assets/scss/components/_forms.scss
+++ b/assets/scss/components/_forms.scss
@@ -23,8 +23,7 @@
 
 // Input fields on focus 
 %forms-focus {
-    border: $form-border-focus;
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .1), 0 0 6px lighten($link-color, 30%);
+    border: 1px solid #888;
 }
 
 // Variable containing all input fields 
