--- a/public/css/main.css
+++ b/public/css/main.css
@@ -825,8 +825,7 @@ a.full-button {
   border: 1px solid #b4b4b4; }
 
 [type=color]:focus, [type=color]:active, [type=date]:focus, [type=date]:active, [type=datetime]:focus, [type=datetime]:active, [type=datetime-local]:focus, [type=datetime-local]:active, [type=email]:focus, [type=email]:active, [type=month]:focus, [type=month]:active, [type=number]:focus, [type=number]:active, [type=password]:focus, [type=password]:active, [type=search]:focus, [type=search]:active, [type=tel]:focus, [type=tel]:active, [type=text]:focus, [type=text]:active, [type=url]:focus, [type=url]:active, [type=week]:focus, [type=week]:active, [type=time]:focus, [type=time]:active, select:focus, select:active, textarea:focus, textarea:active {
-  border: 1px solid #c96645;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.1), 0 0 6px #ebc8bc; }
+  border: 1px solid #888; }
 
 textarea {
   overflow: auto;
@@ -989,18 +988,34 @@ main {
   padding: 30px; }
   .page-header h1 {
     padding: 0 30px;
-    font-size: 5rem;
+    font-size: 3rem;
     font-weight: 400;
     font-family: "Caesar Dressing", -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif; }
+
+@media (min-width: 1000px) {
+  .page-header h1 {
+    font-size: 5rem; } }
 
 .pattern-border {
   background: #c96645 url("../images/pattern.svg");
   height: 25px; }
 
 .message {
-  background: #FFDC88;
-  padding: 30px;
-  font-size: 1.1rem; }
+  border: 4px double #ffbe22;
+  background: #ffebbb;
+  padding: 15px;
+  font-size: 1.1rem;
+  white-space: pre-wrap;
+  display: none; }
+
+.has-error, input.has-error:hover, input.has-error:focus, input.has-error:active,
+select.has-error:hover,
+select.has-error:focus,
+select.has-error:active,
+textarea.has-error:hover,
+textarea.has-error:focus,
+textarea.has-error:active {
+  border: 1px solid #9C2924; }
 
 .flex-grid,
 .flex-list {
