--- a/assets/scss/components/_layout.scss
+++ b/assets/scss/components/_layout.scss
@@ -42,6 +42,7 @@ main {
     font-size: 1.1rem;
     white-space: pre-wrap;
     display: none;
+    margin-bottom: 2rem;
 }
 
 .has-error {
@@ -87,23 +88,28 @@ main {
     .items {
         display: flex;
         padding-bottom: 10px;
-        border-bottom: 1px solid $border-color;
         margin: 10px;
         flex-direction: row;
         flex: auto;
         max-width: 100%;
         justify-content: space-between;
         align-items: center;
+        border-bottom: 1px solid $border-color;
+        &:last-of-type {
+            border-bottom: 0;
+        }
     }
     a.button {
         margin-bottom: 0;
     }
-    display: block;
-    font-size: 1.4rem;
-    font-weight: 700;
-    align-items: center;
-    margin-bottom: 0;
-    text-align: center;
+    .list-item {
+        display: block;
+        font-size: 1.3rem;
+        font-weight: 700;
+        align-items: center;
+        margin-bottom: 0;
+        line-height: 1.2;
+    }
     .list-options {
         display: flex;
         justify-content: center;
@@ -121,4 +127,20 @@ main {
     justify-items: center;
     align-items: center;
     padding: 15px 30px;
+}
+
+.site-footer {
+    margin-top: 2rem;
+    padding: 30px 0;
+    background: $accent-color;
+    color: white;
+    p {
+        margin-bottom: 0;
+    }
+    a {
+        color: lighten($primary-color, 10%);
+        &:hover {
+            color: lighten($primary-color, 20%);
+        }
+    }
 }
