--- a/assets/scss/components/_navigation.scss
+++ b/assets/scss/components/_navigation.scss
@@ -13,6 +13,7 @@
         justify-items: center;
         align-items: center;
         padding: 15px 30px;
+        height: 100px;
         a {
             text-decoration: none;
         }
