Clean up views and comments

--- a/assets/scss/components/_layout.scss
+++ b/assets/scss/components/_layout.scss
@@ -154,6 +154,7 @@ main {
     }
     p {
         margin-bottom: 0;
+        white-space: pre-wrap;
     }
     &:last-of-type {
         border-bottom: 0;
