--- a/assets/scss/components/_navigation.scss
+++ b/assets/scss/components/_navigation.scss
@@ -36,6 +36,7 @@
         }
         .navigation-links {
             justify-self: end;
+            align-items: center;
             display: flex;
             width: 100%;
             justify-content: flex-end;
