--- a/assets/scss/components/_layout.scss
+++ b/assets/scss/components/_layout.scss
@@ -58,7 +58,7 @@ main {
         display: flex;
         border: 1px solid $border-color;
         flex-direction: column;
-        flex: 1 1 calc(50% - 20px);
+        flex: 1 1 100%;
         border: 1px solid $border-color;
         margin: 10px;
     }
@@ -122,7 +122,7 @@ main {
 
 .section-grid {
     display: grid;
-    grid-template-columns: repeat(2, auto);
+    grid-template-columns: repeat(1, auto); 
     grid-gap: 5%;
     justify-items: center;
     align-items: center;
